# RoundFinancial

./: .env.example  .gitignore  .mocharc.json  .prettierignore  ADEVAR_AUDIT_REPORT.md  ADEVAR_AUDIT_REPORT_PASS_10.md  ADEVAR_AUDIT_REPORT_PASS_11.md  ADEVAR_AUDIT_REPORT_PASS_12.md  ADEVAR_AUDIT_REPORT_PASS_2.md  ADEVAR_AUDIT_REPORT_PASS_3_CORRECTED.md  ADEVAR_AUDIT_REPORT_PASS_4.md  ADEVAR_AUDIT_REPORT_PASS_5.md  ADEVAR_AUDIT_REPORT_PASS_6.md  ADEVAR_AUDIT_REPORT_PASS_7.md  ADEVAR_AUDIT_REPORT_PASS_8.md  ADEVAR_AUDIT_REPORT_PASS_9.md  AUDITORIA_CRIPTOECONOMICA_INTERNA.md  AUDITORIA_CRIPTOECONOMICA_V52.md  AUDIT_SCOPE.md  Anchor.toml  BUGBOUNTY_HUNT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FREEZE.md  INTERNAL_SECURITY_AUDIT_OTTERSEC_METHOD.md  INTERNAL_SECURITY_AUDIT_OTTERSEC_METHOD_PASS2.md  LICENSE  MAINNET_READINESS.md  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  roundfi-pitch-en (4).html  rust-toolchain.toml  tsconfig.base.json  tsconfig.json  (+1 more)
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  (+10 more)
app/: .env.example  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
config/: clusters.ts  program-ids.devnet.json
crates/math/: Cargo.toml
crates/math/fuzz/: Cargo.toml  README.md
crates/math/fuzz/corpus/bps/: canonical
crates/math/fuzz/corpus/cascade/: canonical
crates/math/fuzz/corpus/dc_invariant/: canonical
crates/math/fuzz/corpus/escrow_vesting/: canonical
crates/math/fuzz/corpus/seed_draw/: canonical
crates/math/fuzz/corpus/waterfall/: canonical
crates/math/fuzz/fuzz_targets/: bps.rs  cascade.rs  dc_invariant.rs  escrow_vesting.rs  seed_draw.rs  slot_draw.rs  waterfall.rs
crates/math/src/: bps.rs  cascade.rs  constants.rs  dc.rs  error.rs  escrow_vesting.rs  lib.rs  seed_draw.rs  slot_draw.rs  waterfall.rs
docs/: 319-agave-2x-migration-spike.md  319-path-b-spike.md  anchor-build-setup.md  architecture.md  devnet-deployment.md  devnet-setup.md  pitch-alignment.md  roundfi_score_v5_1_proposal.md  roundfi_score_v5_proposal.md  status.md  stress-lab.md  verified-build.md  yield-and-guarantee-fund.md
grant/: 00_README.md  01_PROJECT.md  02_AGENTIC_PROCESS.md  03_PR_LOG.md  04_GRANT_USE.md  05_BUILDER_NOTE.md  06_MILESTONES.md
mobile/: .npmrc  AGENTS.md  App.tsx  README.md  ROADMAP.md  app.json  index.ts  metro.config.js  package-lock.json  package.json  pnpm-workspace.yaml
programs/roundfi-core/: Cargo.toml
programs/roundfi-core/src/: constants.rs  error.rs  lib.rs
programs/roundfi-core/src/cpi/: mod.rs  reputation.rs  yield_adapter.rs
programs/roundfi-core/src/instructions/: cancel_new_authority.rs  cancel_new_fee_bps_yield.rs  cancel_new_treasury.rs  cancel_pending_listing.rs  claim_payout.rs  close_member.rs  close_pool.rs  close_pool_vaults.rs  commit_new_authority.rs  commit_new_fee_bps_yield.rs  commit_new_treasury.rs  contribute.rs  crank_payout.rs  create_pool.rs  deposit_idle_to_yield.rs  escape_valve_buy.rs  escape_valve_list.rs  escape_valve_list_commit.rs  escape_valve_list_reveal.rs  finalize_draw.rs  harvest_yield.rs  init_pool_vaults.rs  initialize_protocol.rs  join_pool.rs  lock_approved_yield_adapter.rs  lock_reputation_program.rs  lock_treasury.rs  migrate_protocol_config.rs  mod.rs  pause.rs  place_embedded_bid.rs  propose_new_authority.rs  propose_new_fee_bps_yield.rs  propose_new_treasury.rs  release_escrow.rs  settle_default.rs  skip_defaulted_payout.rs  update_protocol_config.rs
programs/roundfi-core/src/math/: bps.rs  cascade.rs  dc.rs  escrow_vesting.rs  mod.rs  seed_draw.rs  waterfall.rs
programs/roundfi-core/src/state/: config.rs  draw.rs  listing.rs  member.rs  mod.rs  pool.rs
programs/roundfi-reputation/: Cargo.toml
programs/roundfi-reputation/src/: constants.rs  error.rs  lib.rs
programs/roundfi-reputation/src/identity/: civic.rs  mod.rs  passport.rs
programs/roundfi-reputation/src/instructions/: attest.rs  cancel_new_reputation_authority.rs  commit_new_reputation_authority.rs  devnet_identity_shim.rs  get_profile.rs  init_profile.rs  initialize_reputation.rs  link_civic_identity.rs  link_passport_identity.rs  migrate_reputation_config.rs  mod.rs  promote_level.rs  propose_new_reputation_authority.rs  refresh_identity.rs  revoke.rs  set_identity_gate.rs  unlink_identity.rs  update_reputation_config.rs
programs/roundfi-reputation/src/state/: attestation.rs  behavioral_payload.rs  config.rs  identity.rs  identity_gate.rs  mod.rs  profile.rs
programs/roundfi-yield-kamino/: Cargo.toml
programs/roundfi-yield-kamino/src/: lib.rs
programs/roundfi-yield-mock/: Cargo.toml
programs/roundfi-yield-mock/src/: lib.rs
scripts/: test-fresh.sh
sdk/: CHANGELOG.md  README.md  package.json
spikes/: litesvm-anchor.ts  litesvm-compat.ts  litesvm-joinpool.ts  litesvm-mpl-core.ts  litesvm-seed.ts
tests/: admin_auth.spec.ts  admin_authority_cache.spec.ts  admin_i18n.spec.ts  admin_rate_limit.spec.ts  admin_shared_store.spec.ts  app_encoders.spec.ts  app_encoders_bankrun.spec.ts  app_escape_valve_errors.spec.ts  app_pool_cache.spec.ts  app_pool_store.spec.ts  behavioral.spec.ts  behavioral_payload_parity.spec.ts  economic_parity.spec.ts  edge_close_defaulted_pool.spec.ts  edge_crank_payout.spec.ts  edge_create_pool_guards.spec.ts  edge_cycle_boundary.spec.ts  edge_degenerate_shapes.spec.ts  edge_escape_valve_commit_reveal.spec.ts  edge_grace_default.spec.ts  edge_grace_default_shield1_only.spec.ts  edge_reputation_payout_neutral.spec.ts  edge_settle_default_boundary.spec.ts  edge_skip_defaulted_payout.spec.ts  edge_stall_reanchor.spec.ts  edge_tiny_lifecycle.spec.ts  edge_treasury_rotation.spec.ts  email_notify_select.spec.ts  email_optin.spec.ts  email_send.spec.ts  events.spec.ts  frontend_allowlist.spec.ts  indexer_log.spec.ts  insights_real.spec.ts  kamino_pin_verify.spec.ts  lifecycle.spec.ts  litesvm_catchup_grace.spec.ts  litesvm_join_pool.spec.ts  litesvm_lance_embutido.spec.ts  litesvm_ordering_policy.spec.ts  (+29 more)
(+587 files in other folders)
