[workspace]
members = [
    "crates/math",
    "programs/roundfi-core",
    "programs/roundfi-reputation",
    "programs/roundfi-yield-mock",
    "programs/roundfi-yield-kamino",
]
# `crates/math/fuzz` is intentionally excluded — cargo-fuzz needs
# nightly + libfuzzer-sys with custom build flags that we don't want
# leaking into the rest of the workspace. The fuzz lane installs the
# nightly toolchain separately (see .github/workflows/fuzz.yml).
exclude = ["crates/math/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RoundFi"]
license = "Apache-2.0"
repository = "https://github.com/alrimarleskovar/RoundFinancial"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
