[workspace]
members = [
    "crates/math",
    "programs/roundfi-core",
    "programs/roundfi-reputation",
    "programs/roundfi-yield-mock",
    "programs/roundfi-yield-kamino",
]
# `crates/math/fuzz` is intentionally excluded — cargo-fuzz needs
# nightly + libfuzzer-sys with custom build flags that we don't want
# leaking into the rest of the workspace. The fuzz lane installs the
# nightly toolchain separately (see .github/workflows/fuzz.yml).
exclude = ["crates/math/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RoundFi"]
license = "Apache-2.0"
repository = "https://github.com/alrimarleskovar/RoundFinancial"
# Adevar Labs SEV-011 follow-up: these crates are Solana programs +
# math lib, never intended for crates.io publication. `publish = false`
# is the declared-intent flag that also tells cargo-deny it's safe to
# accept intra-workspace `path = "../..."` deps under
# `bans.allow-wildcard-paths`.
publish = false

# Reproducible-build image selector for `solana-verify` (Solscan/OtterSec
# verified-build flow). `solana-verify` picks its docker base image from,
# in order: (1) this key, (2) the `solana-program` version in Cargo.lock,
# (3) a default. Our deps pin `solana-program 3.0.0`, so WITHOUT this key
# the resolver fell back to the `solana-verifiable-build:3.0.0` image whose
# platform-tools ship Cargo 1.84 — too old for the `edition2024` crates the
# anchor-1.0 / solana-3.0 tree pulls (cpufeatures 0.3.0, base64ct 1.8.3, …),
# so `solana-verify build` failed (see docs/verified-build.md, #487/#492).
# Pinning the image to 3.1.14 selects platform-tools v1.52 / rustc 1.89 —
# the SAME toolchain our `anchor build` + `solana program deploy` use, so the
# verify build (a) compiles edition2024 with no dep pins and (b) reproduces
# the exact bytecode that is live on-chain, which is the whole point of the
# attestation. Bump in lockstep with the deploy toolchain (`solana --version`).
[workspace.metadata.cli]
solana = "3.1.14"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
