[package]
name = "roundfi-core"
version.workspace = true
edition.workspace = true
description = "RoundFi core — ROSCA pool state machine, escrow, and solidarity vault"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "roundfi_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token", "associated_token"] }
mpl-core    = { version = "0.8.0", features = ["anchor"] }
# Step 4e: type-safe CPI into roundfi-reputation. The `cpi` feature
# flips the dependency to no-entrypoint mode, so we pull in the module
# tree without registering a second entrypoint.
roundfi-reputation = { path = "../roundfi-reputation", features = ["cpi", "no-entrypoint"] }
