[package]
name = "roundfi-core"
version.workspace = true
edition.workspace = true
description = "RoundFi core — ROSCA pool state machine, escrow, and solidarity vault"
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "roundfi_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "roundfi-reputation/idl-build"]
# Devnet-only override of GRACE_PERIOD_SECS for the Pre-Ceremony Beta
# Genesis Canary phase (cycle = 48h, grace = 24h). Floor SEV-002 (86_400)
# is preserved — anything below would re-introduce the SEV-002 footgun.
# See docs/pt/pre-ceremony-beta-proposta.md §6.3 (Opção B) and §9 of the
# foundational document. MUST NOT be enabled in mainnet builds.
devnet-canary = []

[dependencies]
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
anchor-spl  = { version = "1.0", features = ["token", "associated_token"] }
mpl-core    = { version = "0.12", default-features = false, features = ["borsh-v1"] }
# Issue #229: pure-Rust math crate (Triple Shield, waterfall, D/C, vesting).
# Zero Solana deps so the same code compiles on host x86_64 for clippy +
# proptest while still linking into the SBF target through this path dep.
roundfi-math = { path = "../../crates/math" }
# Step 4e: type-safe CPI into roundfi-reputation. The `cpi` feature
# flips the dependency to no-entrypoint mode, so we pull in the module
# tree without registering a second entrypoint.
roundfi-reputation = { path = "../roundfi-reputation", features = ["cpi", "no-entrypoint"] }

[dev-dependencies]
# Property-based tests against `math/waterfall.rs` invariants
# (conservation, monotonicity, GF saturating semantics, fee-on-gross
# ordering). dev-dependencies don't compile into the BPF binary.
proptest = "1"
