[package]
name = "roundfi-reputation"
version.workspace = true
edition.workspace = true
description = "RoundFi reputation — SAS-compatible attestation service and reputation ladder"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "roundfi_reputation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
