[package]
name = "roundfi-reputation"
version.workspace = true
edition.workspace = true
description = "RoundFi reputation — SAS-compatible attestation service and reputation ladder"
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "roundfi_reputation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# DEVNET-ONLY Human Passport identity shim (mirrors roundfi-core's
# `devnet-canary`). Adds `devnet_seed_passport_authority` +
# `devnet_issue_attestation` so the real `link_passport_identity` flow is
# testable on devnet (where the frozen attestation authority points at a
# non-functional Civic placeholder). NEVER enable for a mainnet artifact —
# `scripts/devnet/deploy.ts` only passes it when `DEVNET_IDENTITY_SHIM` is
# set and refuses mainnet-beta. See instructions/devnet_identity_shim.rs.
devnet-identity-shim = []

[dependencies]
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
