[package]
name = "roundfi-yield-kamino"
version.workspace = true
edition.workspace = true
description = "RoundFi yield adapter (Kamino) — real Kamino Lend CPI for Mainnet; identical interface to roundfi-yield-mock"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "roundfi_yield_kamino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1" }
